@@ -1,3 +1,8 @@
+2011-04-02  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclEvent.c, generic/tclFileName.c: More generation of
+	errorCode information (default [bgerror] and [glob]).
+
 2011-04-01  Reinhard Max  <max@suse.de>
 
 	* library/init.tcl: TIP#131 implementation.
